--- a/FitApp/Base.lproj/Main.storyboard
+++ b/FitApp/Base.lproj/Main.storyboard
@@ -12,7 +12,7 @@
         <!--FitApp-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="FitApp" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="mainPage" id="BYZ-38-t0r" customClass="ViewController" customModule="FitApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -184,6 +184,11 @@
                         <barButtonItem key="leftBarButtonItem" title="Item" image="menuBurger" id="YTm-wB-5U0">
                             <connections>
                                 <action selector="openMenu:" destination="BYZ-38-t0r" id="Ndx-TZ-z6a"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" title="Sign Out" id="nga-5a-1ic">
+                            <connections>
+                                <action selector="signOutButton:" destination="BYZ-38-t0r" id="fPY-P9-328"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -664,7 +669,7 @@
         <!--Sign in-->
         <scene sceneID="pao-Hk-sHF">
             <objects>
-                <viewController id="wF4-3I-QGB" customClass="SignIn" customModule="FitApp" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="signIn" id="wF4-3I-QGB" customClass="SignIn" customModule="FitApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="AIT-i8-7lL">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -687,6 +692,9 @@
                                 <rect key="frame" x="107" y="188" width="161" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Sign in"/>
+                                <connections>
+                                    <action selector="SignIn:" destination="wF4-3I-QGB" eventType="touchUpInside" id="C77-47-0tm"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3hW-7j-2se">
                                 <rect key="frame" x="140" y="226" width="94" height="44"/>
@@ -701,6 +709,10 @@
                         <viewLayoutGuide key="safeArea" id="N4j-19-kPX"/>
                     </view>
                     <navigationItem key="navigationItem" title="Sign in" id="x8O-5I-C1y"/>
+                    <connections>
+                        <outlet property="emailTextField" destination="W0y-hJ-qTa" id="jU4-rs-MuI"/>
+                        <outlet property="pswdTextField" destination="Yg8-Q0-SRI" id="7s7-s2-j5G"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zH3-xx-s5X" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -789,7 +801,8 @@
         <!--Navigation Controller-->
         <scene sceneID="Ahf-aj-oGO">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="5Q0-DA-fCe" sceneMemberID="viewController">
+                <placeholder placeholderIdentifier="IBFirstResponder" id="7kP-8y-LOL" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <navigationController storyboardIdentifier="mainPageNav" automaticallyAdjustsScrollViewInsets="NO" id="5Q0-DA-fCe" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="QJb-lq-YO4">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
@@ -800,7 +813,6 @@
                         <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="6ja-gq-eCf"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="7kP-8y-LOL" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1088.8" y="-346.77661169415296"/>
         </scene>
@@ -825,7 +837,7 @@
         <!--Navigation Controller-->
         <scene sceneID="dfF-hq-MxN">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="DU7-D8-9Nn" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="signInNav" automaticallyAdjustsScrollViewInsets="NO" id="DU7-D8-9Nn" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="XIg-LD-wC0">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
