--- a/FitApp/Base.lproj/Main.storyboard
+++ b/FitApp/Base.lproj/Main.storyboard
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="DU7-D8-9Nn">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="DU7-D8-9Nn">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -336,7 +336,7 @@
                                     <color key="titleColor" red="0.18039215689999999" green="0.80000000000000004" blue="0.4431372549" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
                                 <connections>
-                                    <segue destination="7QK-rf-zFZ" kind="presentation" id="wlj-5O-qtZ"/>
+                                    <segue destination="d6U-bP-95R" kind="presentation" id="wlj-5O-qtZ"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7a9-cZ-RWb">
@@ -361,9 +361,9 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yEv-zF-cIf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1471" y="1413"/>
+            <point key="canvasLocation" x="1729" y="1666"/>
         </scene>
-        <!--All Exercise Controler-->
+        <!--All Exercises-->
         <scene sceneID="a8B-XP-ZEj">
             <objects>
                 <tableViewController id="7QK-rf-zFZ" customClass="AllExerciseControler" customModule="FitApp" customModuleProvider="target" sceneMemberID="viewController">
@@ -371,28 +371,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <navigationBar key="tableHeaderView" contentMode="scaleToFill" id="5Ik-AX-gOJ">
-                            <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
-                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                            <items>
-                                <navigationItem title="Exercises" id="WyJ-3s-dEU">
-                                    <barButtonItem key="leftBarButtonItem" systemItem="done" id="jEC-5A-9ZK">
-                                        <connections>
-                                            <action selector="doneAddingExercises:" destination="7QK-rf-zFZ" id="75a-Ee-bjK"/>
-                                            <segue destination="HbM-rk-9Qe" kind="show" identifier="chosenExercises" id="WwP-Et-8sN"/>
-                                        </connections>
-                                    </barButtonItem>
-                                    <barButtonItem key="rightBarButtonItem" systemItem="edit" id="hse-eL-I10">
-                                        <connections>
-                                            <action selector="reorderRows:" destination="7QK-rf-zFZ" id="Bdf-aX-Ksa"/>
-                                        </connections>
-                                    </barButtonItem>
-                                </navigationItem>
-                            </items>
-                        </navigationBar>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="AllExerciseCell" id="4cY-Rl-ypo">
-                                <rect key="frame" x="0.0" y="72" width="375" height="44"/>
+                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="4cY-Rl-ypo" id="JU9-Z6-xV2">
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
@@ -405,15 +386,27 @@
                             <outlet property="delegate" destination="7QK-rf-zFZ" id="Aqr-bT-6lJ"/>
                         </connections>
                     </tableView>
+                    <navigationItem key="navigationItem" title="All Exercises" id="XWc-RQ-yMx">
+                        <barButtonItem key="leftBarButtonItem" systemItem="done" id="jEC-5A-9ZK">
+                            <connections>
+                                <action selector="doneAddingExercises:" destination="7QK-rf-zFZ" id="75a-Ee-bjK"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" systemItem="edit" id="hse-eL-I10">
+                            <connections>
+                                <action selector="reorderRows:" destination="7QK-rf-zFZ" id="Bdf-aX-Ksa"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="flh-Jv-dFV" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2375" y="1137"/>
+            <point key="canvasLocation" x="3972" y="1790"/>
         </scene>
         <!--Detail Practice-->
         <scene sceneID="dZz-CI-zQ7">
             <objects>
-                <tableViewController id="Vc8-WI-iJN" customClass="DetailPractice" customModule="FitApp" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="detailPractice" id="Vc8-WI-iJN" customClass="DetailPractice" customModule="FitApp" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="WWL-E2-1Qr" customClass="DetaiPractice">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -444,7 +437,7 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
-                        <outlet property="AddExercise" destination="12U-nP-YUR" id="ADV-po-H52"/>
+                        <outlet property="AddExercise" destination="12U-nP-YUR" id="SF4-h7-ReU"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8o0-aO-dbk" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -567,7 +560,7 @@
                                 <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <items>
-                                    <navigationItem title="Add Exrcise" id="llG-Ec-aHs">
+                                    <navigationItem title="Add New Exrcise" id="llG-Ec-aHs">
                                         <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="SYZ-2I-Q0A">
                                             <connections>
                                                 <action selector="cancelAddExercise:" destination="nhg-NG-kR7" id="kS6-10-sdM"/>
@@ -664,7 +657,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bf9-JR-jf6" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4111" y="439"/>
+            <point key="canvasLocation" x="4218" y="439"/>
         </scene>
         <!--Sign in-->
         <scene sceneID="pao-Hk-sHF">
@@ -801,7 +794,6 @@
         <!--Navigation Controller-->
         <scene sceneID="Ahf-aj-oGO">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="7kP-8y-LOL" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <navigationController storyboardIdentifier="mainPageNav" automaticallyAdjustsScrollViewInsets="NO" id="5Q0-DA-fCe" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="QJb-lq-YO4">
@@ -813,6 +805,7 @@
                         <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="6ja-gq-eCf"/>
                     </connections>
                 </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="7kP-8y-LOL" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1088.8" y="-346.77661169415296"/>
         </scene>
@@ -852,20 +845,37 @@
             </objects>
             <point key="canvasLocation" x="-1892" y="-256.82158920539734"/>
         </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="QCK-ZG-Ta8">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="jlP-mN-X3F" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="d6U-bP-95R" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="MEg-Uw-abx">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="7QK-rf-zFZ" kind="relationship" relationship="rootViewController" id="4eh-qe-E5D"/>
+                    </connections>
+                </navigationController>
+            </objects>
+            <point key="canvasLocation" x="2750" y="2144"/>
+        </scene>
     </scenes>
     <resources>
-        <image name="Diet" width="200" height="200"/>
-        <image name="measure_menu" width="37.5" height="37.5"/>
-        <image name="measurements" width="200" height="200"/>
-        <image name="menuBurger" width="19.200000762939453" height="19.200000762939453"/>
-        <image name="nutrition_menu" width="37.5" height="37.5"/>
-        <image name="timer_menu" width="37.5" height="37.5"/>
-        <image name="training" width="200" height="200"/>
-        <image name="training_menu" width="37.5" height="37.5"/>
+        <image name="Diet" width="50" height="50"/>
+        <image name="measure_menu" width="25" height="25"/>
+        <image name="measurements" width="50" height="50"/>
+        <image name="menuBurger" width="24" height="24"/>
+        <image name="nutrition_menu" width="25" height="25"/>
+        <image name="timer_menu" width="25" height="25"/>
+        <image name="training" width="50" height="50"/>
+        <image name="training_menu" width="25" height="25"/>
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="El6-bg-yGj"/>
-        <segue reference="WwP-Et-8sN"/>
         <segue reference="UHR-Qe-LQT"/>
     </inferredMetricsTieBreakers>
     <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
