--- a/FitApp/Base.lproj/Main.storyboard
+++ b/FitApp/Base.lproj/Main.storyboard
@@ -26,9 +26,12 @@
                                             <constraint firstAttribute="height" constant="30" id="M1S-Fl-j3s"/>
                                         </constraints>
                                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="17" maxY="0.0"/>
-                                        <state key="normal" title="Питание" image="nutrition_menu">
+                                        <state key="normal" title="Друзья" image="nutrition_menu">
                                             <color key="titleColor" red="0.1803921568627451" green="0.80000000000000004" blue="0.44313725490196076" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </state>
+                                        <connections>
+                                            <segue destination="C8I-kR-zWq" kind="show" id="TX0-90-vOH"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="trailing" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="INW-eb-Jqx">
                                         <rect key="frame" x="8" y="184" width="124" height="30"/>
@@ -48,7 +51,7 @@
                                         </constraints>
                                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="20" maxY="0.0"/>
                                         <state key="normal" title="Таймер" image="timer_menu">
-                                            <color key="titleColor" red="0.1803921568627451" green="0.80000000000000004" blue="0.44313725490196076" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <color key="titleColor" red="0.42352941179999998" green="0.78823529410000004" blue="0.4431372549" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </state>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="trailing" contentVerticalAlignment="center" adjustsImageSizeForAccessibilityContentSizeCategory="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UkK-z4-TSJ">
@@ -208,6 +211,53 @@
             </objects>
             <point key="canvasLocation" x="1892" y="-347.67616191904051"/>
         </scene>
+        <!--Friends-->
+        <scene sceneID="vqW-ST-gyV">
+            <objects>
+                <tableViewController id="C8I-kR-zWq" customClass="Friends" customModule="FitApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="VYI-Fz-Rga">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="friendCell" textLabel="wsV-2J-Qbf" detailTextLabel="KR0-lP-f6D" style="IBUITableViewCellStyleSubtitle" id="JcE-hr-fHe">
+                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="JcE-hr-fHe" id="Zvf-fO-9uF">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="wsV-2J-Qbf">
+                                            <rect key="frame" x="16" y="5" width="33.5" height="20.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="KR0-lP-f6D">
+                                            <rect key="frame" x="16" y="25.5" width="44" height="14.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="C8I-kR-zWq" id="a60-WE-i9a"/>
+                            <outlet property="delegate" destination="C8I-kR-zWq" id="x5F-mD-oiF"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Friends" id="OfD-zb-jFP">
+                        <barButtonItem key="backBarButtonItem" title="Back" id="V4I-1g-wSK"/>
+                    </navigationItem>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bcx-OX-wHg" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3506" y="-1190"/>
+        </scene>
         <!--List Practice-->
         <scene sceneID="sCz-Se-5Lj">
             <objects>
@@ -350,6 +400,13 @@
                                     <segue destination="nhg-NG-kR7" kind="presentation" identifier="fromAddNewPractice" id="El6-bg-yGj"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3q7-Pb-7er">
+                                <rect key="frame" x="52" y="593" width="270" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="tintColor" red="0.29803921570000003" green="0.85098039219999999" blue="0.3921568627" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <state key="normal" title="Выбрать пользователей"/>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="WyV-Lr-6Vp"/>
@@ -361,7 +418,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yEv-zF-cIf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1729" y="1666"/>
+            <point key="canvasLocation" x="1088.8" y="1789.6551724137933"/>
         </scene>
         <!--All Exercises-->
         <scene sceneID="a8B-XP-ZEj">
@@ -401,7 +458,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="flh-Jv-dFV" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3972" y="1790"/>
+            <point key="canvasLocation" x="3812" y="1790"/>
         </scene>
         <!--Detail Practice-->
         <scene sceneID="dZz-CI-zQ7">
@@ -430,14 +487,22 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" id="GhO-cJ-gDy">
-                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="12U-nP-YUR">
-                            <connections>
-                                <segue destination="nhg-NG-kR7" kind="presentation" identifier="addExercise" id="4K4-mJ-Saq"/>
-                            </connections>
-                        </barButtonItem>
+                        <rightBarButtonItems>
+                            <barButtonItem systemItem="add" id="12U-nP-YUR">
+                                <connections>
+                                    <segue destination="nhg-NG-kR7" kind="presentation" identifier="addExercise" id="4K4-mJ-Saq"/>
+                                </connections>
+                            </barButtonItem>
+                            <barButtonItem title="Item" image="search" id="h9s-eH-DfA">
+                                <connections>
+                                    <segue destination="d6U-bP-95R" kind="presentation" identifier="SearchFromDetailPractice" id="PUa-oQ-mZi"/>
+                                </connections>
+                            </barButtonItem>
+                        </rightBarButtonItems>
                     </navigationItem>
                     <connections>
                         <outlet property="AddExercise" destination="12U-nP-YUR" id="SF4-h7-ReU"/>
+                        <outlet property="searchAndAdd" destination="h9s-eH-DfA" id="1qJ-i7-2BN"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8o0-aO-dbk" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -546,7 +611,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="041-8j-D9R" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3322" y="793"/>
+            <point key="canvasLocation" x="3410" y="35"/>
         </scene>
         <!--Add Exercise-->
         <scene sceneID="tIK-Z4-eEh">
@@ -657,7 +722,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bf9-JR-jf6" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4218" y="439"/>
+            <point key="canvasLocation" x="4284" y="439"/>
         </scene>
         <!--Sign in-->
         <scene sceneID="pao-Hk-sHF">
@@ -848,8 +913,7 @@
         <!--Navigation Controller-->
         <scene sceneID="QCK-ZG-Ta8">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="jlP-mN-X3F" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="d6U-bP-95R" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="AllExer" automaticallyAdjustsScrollViewInsets="NO" useStoryboardIdentifierAsRestorationIdentifier="YES" id="d6U-bP-95R" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="MEg-Uw-abx">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
@@ -860,8 +924,27 @@
                         <segue destination="7QK-rf-zFZ" kind="relationship" relationship="rootViewController" id="4eh-qe-E5D"/>
                     </connections>
                 </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="jlP-mN-X3F" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2750" y="2144"/>
+            <point key="canvasLocation" x="2494" y="1790"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="JKa-Pg-sZ8">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="UIr-Su-0Ki" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="RDx-BT-Cfm">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="C8I-kR-zWq" kind="relationship" relationship="rootViewController" id="ENx-FC-Ffr"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="7BU-3Z-L7p" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2652" y="-1190"/>
         </scene>
     </scenes>
     <resources>
@@ -870,13 +953,16 @@
         <image name="measurements" width="50" height="50"/>
         <image name="menuBurger" width="24" height="24"/>
         <image name="nutrition_menu" width="25" height="25"/>
+        <image name="search" width="16" height="16"/>
         <image name="timer_menu" width="25" height="25"/>
         <image name="training" width="50" height="50"/>
         <image name="training_menu" width="25" height="25"/>
     </resources>
     <inferredMetricsTieBreakers>
+        <segue reference="wlj-5O-qtZ"/>
         <segue reference="El6-bg-yGj"/>
         <segue reference="UHR-Qe-LQT"/>
+        <segue reference="TX0-90-vOH"/>
     </inferredMetricsTieBreakers>
     <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
 </document>
