--- a/FitApp/Base.lproj/LaunchScreen.storyboard
+++ b/FitApp/Base.lproj/LaunchScreen.storyboard
@@ -24,9 +24,9 @@
                                 <rect key="frame" x="62.5" y="170" width="250" height="151"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sop-mT-K8G">
-                                <rect key="frame" x="114" y="371" width="147.5" height="58.5"/>
+                                <rect key="frame" x="95" y="371" width="185.5" height="58.5"/>
                                 <attributedString key="attributedText">
-                                    <fragment content="FitApp">
+                                    <fragment content="FitShark">
                                         <attributes>
                                             <color key="NSColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <font key="NSFont" metaFont="system" size="50"/>
